--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://eniolabadmus:Badmus2025@cluster0.ld40p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://eniolabadmus351:pfmNLXXQo4OgYQ3S@cluster0.0usys.mongodb.net/Testing
+PORT=5000
 
