--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGO_URI=mongodb+srv://eniolabadmus351:pfmNLXXQo4OgYQ3S@cluster0.0usys.mongodb.net/Testing
 PORT=5000
+MONGO_URI=mongodb+srv://eniolabadmus351:pfmNLXXQo4OgYQ3S@cluster0.0usys.mongodb.net/Testing
+FRONTEND_URL=https://frontend-test-run.vercel.app
+
 
